// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/audit_table/AuditTable should match snapshot with audits 1`] = `
<div>
  <table
    class="table"
  >
    <thead>
      <tr>
        <th>
          Timestamp
        </th>
        <th>
          User ID
        </th>
        <th>
          Action
        </th>
        <th>
          IP Address
        </th>
        <th>
          Session ID
        </th>
      </tr>
    </thead>
    <tbody
      data-testid="auditTableBody"
    >
      <tr
        class="AuditRow"
      >
        <td>
          <div>
            <div>
              Aug 11, 1971
            </div>
            <div>
              05:01 PM
            </div>
          </div>
        </td>
        <td>
          user_id_1
        </td>
        <td
          class="AuditRowDesc"
        >
          Channels yeye
        </td>
        <td>
          ::1
        </td>
        <td>
          hb8febm9ytdiz8zqaxj18efqhy
        </td>
      </tr>
      <tr
        class="AuditRow"
      >
        <td>
          <div>
            <div>
              Aug 14, 1971
            </div>
            <div>
              09:32 PM
            </div>
          </div>
        </td>
        <td>
          user_id_1
        </td>
        <td
          class="AuditRowDesc"
        >
          Successfully logged in
        </td>
        <td>
          ::1
        </td>
        <td />
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`components/audit_table/AuditTable should match snapshot with no audits 1`] = `
<div>
  <table
    class="table"
  >
    <thead>
      <tr>
        <th>
          Timestamp
        </th>
        <th>
          User ID
        </th>
        <th>
          Action
        </th>
        <th>
          IP Address
        </th>
        <th>
          Session ID
        </th>
      </tr>
    </thead>
    <tbody
      data-testid="auditTableBody"
    />
  </table>
</div>
`;
